##Text encoding: utf-8

2013-05-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/functions.cc: new functions for Gnumeric.
	* gnumeric/plugin.xml.in.in: ditto.
	* libs/gcu/chemistry.cc:new function: gcu_element_get_weight().
	* libs/gcu/chemistry.h: ditto.

2013-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/cycle.h: API docs fixes.
	* libs/gcugtk/message.h: ditto.
	* libs/gcugtk/printable.h: ditto.
	* plugins/paint/templates/templatetool.cc: more gtk+-3.8 deprecations fixes.
	* programs/table/gchemtable-curve.cc: fixed graph properties after edition.
	* programs/table/gchemtable-data.cc: don't crash when using masses.

2013-05-25  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: request recent glib and gtk+.
	* libs/gccv/text.cc: fix build with gtk+-3.8.
	* libs/gcp/fontsel.cc: ditto.
	* libs/gcp/theme.cc: ditto.
	* libs/gcp/tools.cc: ditto.
	* libs/gcp/window.cc: ditto.
	* libs/gcr/atomsdlg.cc: ditto.
	* libs/gcr/atomsdlg.h: ditto.
	* libs/gcr/linesdlg.cc: ditto.
	* libs/gcr/linesdlg.h: ditto.
	* libs/gcr/prefs.cc: ditto.
	* libs/gcr/prefs.h: ditto.
	* libs/gcr/view-settings.cc: ditto.
	* libs/gcr/view-settings.h: ditto.
	* plugins/paint/residues/residues-dlg.cc: ditto.

2013-05-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/loader-error.h: add missing header.

2013-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/reaction-arrow.cc: ensure the length is long enough after adding
	children, and remove obsolete PositionChild().
	* libs/gcp/reaction-arrow.h: ditto.

2013-05-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* gnumeric/Makefile.am: fix warning.
	* libs/gcp/reaction-arrow.cc: evaluate attached objects blocks sizes.
	* libs/gcp/step-counter.cc: fix step.

2013-04-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/Makefile.am: add new files.
	* libs/gcp/application.cc: new StepCounter class.
	* libs/gcp/reaction-arrow.cc: ditto.